[package]
name = "evalrs"
version = "0.0.13"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Rust code snippet evaluator"
homepage = "https://github.com/sile/evalrs"
repository = "https://github.com/sile/evalrs"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3.7.1"

[profile.release]
lto = true
