[package]
name = "evalrs"
version = "0.0.14"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Rust code snippet evaluator"
homepage = "https://github.com/sile/evalrs"
repository = "https://github.com/sile/evalrs"
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
noargs = "0.3.2"
regex = "1"
tempfile = "3.7.1"

[profile.release]
lto = true
